--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -7,7 +7,7 @@ class="alert alert-danger">
   <form (ngSubmit) = "login()" #f="ngForm">
     <div class="form-group">
       <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" placeholder="username" name="username" ngModel required #username="ngModel"/>
+      <input type="text" class="form-control" id="username" placeholder="username" name="username" ngModel required #username="ngModel">
     </div>
 
     <span class="help-block" *ngIf="!username.valid && username.touched">
@@ -16,14 +16,16 @@ class="alert alert-danger">
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" placeholder="password" name="password" ngModel required #password="ngModel"/>
+      <input type="password" class="form-control" id="password" placeholder="password" name="password" ngModel required #password="ngModel">
     </div>
 
     <span class="help-block" *ngIf="!password.valid && password.touched">
     Please enter password!
     </span>
 
-    <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+    <div class="form-group">
+      <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+    </div>
 
     <a routerLink="/register" class="btn btn-success btn-block">Regester</a>
   </form>
