--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,58 +1,3 @@
-<!--<nav class="navbar navbar-default navbar-fixed-top">-->
-  <!--<div class="container-fluid row">-->
-
-    <!--<div class="navbar-text pull-left">-->
-      <!--<a routerLink="user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">-->
-          <!--<span class="glyphicon glyphicon-chevron-left">-->
-          <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<div class="navbar-text pull-right">-->
-      <!--<a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-icon-padding cl-text-black">-->
-          <!--<span class="glyphicon glyphicon-ok">-->
-          <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<a class="navbar-brand cl-text-white cl-text-bold" href="#">-->
-      <!--Widgets Edit-->
-    <!--</a>-->
-  <!--</div>-->
-<!--</nav>-->
-
-<!--<div class="container">-->
-  <!--<form>-->
-    <!--<div class="form-group">-->
-      <!--<label for="youtube-name">Name</label>-->
-      <!--<input [(ngModel)]="widget.widgetType" type="text" class="form-control" id="youtube-name" placeholder="Name" [ngModelOptions]="{standalone: true}">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="youtube-text">Text</label>-->
-      <!--<input [(ngModel)]="widget.text" type="text" class="form-control" id="youtube-text" placeholder="Text" [ngModelOptions]="{standalone: true}">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="youtube-URL">URL</label>-->
-      <!--<input [(ngModel)]="widget.url" type="text" class="form-control" id="youtube-URL" placeholder="URL" [ngModelOptions]="{standalone: true}">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="youtube-width">Width</label>-->
-      <!--<input [(ngModel)]="widget.width" type="text" class="form-control" id="youtube-width" placeholder="100%" [ngModelOptions]="{standalone: true}">-->
-    <!--</div>-->
-  <!--</form>-->
-  <!--<a class="btn btn-danger btn-block" routerLink="user/{{uid}}/website/{{uid}}/page/{{pid}}/widget">Delete</a>-->
-<!--</div>-->
-
-<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="pull-right navbar-text">-->
-
-      <!--<a routerLink="/user/{{uid}}" class="cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-user"></span>-->
-      <!--</a>-->
-
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
-
 <div [ngSwitch]="widget.widgetType">
 
   <div *ngSwitchCase="'HEADER'">
@@ -66,5 +11,14 @@
   <div *ngSwitchCase="'YOUTUBE'">
     <app-widget-youtube></app-widget-youtube>
   </div>
+
+  <div *ngSwitchCase="'HTML'">
+    <app-widget-html></app-widget-html>
+  </div>
+
+  <div *ngSwitchCase="'TEXT'">
+    <app-widget-text></app-widget-text>
+  </div>
+
 
 </div>
