fixed my widgets bugs

--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="navbar-text pull-right">
       <!--<a (click)="createWebsite()" routerLink="/user/{{uid}}/website/{{website._id}}/page" class="cl-icon-padding cl-text-black">-->
-      <a (click)="createNewPage(newPage)" class="cl-icon-padding cl-text-black">
+      <a (click)="createPage(newPage)" class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
