--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -10,7 +10,7 @@
         <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           Websites
         </a>
-        <a routerLink="/user/{{uid}}/website/" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="['/#']" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a>
       </div>
