--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -1,42 +1,57 @@
-<nav class="navbar navbar-fixed-top navbar-light bg-secondary">
-  <a class="btn navbar-brand" routerLink="..">
-    <span class="glyphicon glyphicon-chevron-left text-dark"></span>
-  </a>
-  <div class="navbar-brand font-weight-bold">
-    Widget Edit
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid row">
+    <div class="navbar-text pull-left">
+      <a routerLink=".." class="cl-text-black cl-icon-padding">
+        <span class="glyphicon glyphicon-chevron-left">
+        </span>
+      </a>
+    </div>
+    <div class="navbar-text pull-right">
+      <a (click)="updateOrCreateWidget()" class="cl-icon-padding cl-text-black">
+        <span class="glyphicon glyphicon-ok">
+        </span>
+      </a>
+    </div>
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
+      Widgets Edit
+    </a>
   </div>
-  <a class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
-    <span class="glyphicon glyphicon-ok text-dark"></span>
-  </a>
 </nav>
-<div class="container-fluid cl-body-padding">
+
+<div class="container">
   <form>
     <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id= "name" name="name" placeholder="Name">
+      <label for="text-name">Name (actually there is no attribute for this according to assignment doc)</label>
+      <input type="text" class="form-control" id="text-name" placeholder="Name">
     </div>
     <div class="form-group">
-      <label for="text">Text</label>
-      <input [(ngModel)]="widget.text" type="text" class="form-control" id="text" name="text" placeholder="Text">
+      <label for="text-text">Text</label>
+      <input [(ngModel)]="widget.text" type="text" class="form-control" id="text-text" placeholder="Text" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
-      <label for="rows">Rows</label>
-      <input type="number" class="form-control" id="rows" name="rows" placeholder="Size">
+      <label for="text-rows">Rows (actually there is no attribute for this according to assignment doc)</label>
+      <input type="text" class="form-control" id="text-rows" placeholder="Rows">
     </div>
     <div class="form-group">
-      <label for="placeholder">Placeholder</label>
-      <input [(ngModel)]="widget.text" name="placholder" id="placeholder" class="form-control" required/>
-      <p></p>
-      <input type="text" readonly value="Formatted" class="form-control" />
+      <label for="text-placeholder">Rows (actually there is no attribute for this according to assignment doc)</label>
+      <input type="text" class="form-control" id="text-placeholder" placeholder="Placeholder">
+    </div>
+    <div class="input-group">
+      <input type="text" readonly value="Formatted" class="form-control"/>
       <span class="input-group-addon">
-        <input [(ngModel)]="widget.formatted" type="checkbox" />
+        <input [(ngModel)]="widget.formatted" type="checkbox" [ngModelOptions]="{standalone: true}">
       </span>
-    </div>
+    </div><br/>
   </form>
-  <a (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</a>
+  <a class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</a>
 </div>
-<nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">
-  <a class="btn navbar-brand pull-right" routerLink="/user/{{uid}}">
-    <span class="glyphicon glyphicon-user text-primary"></span>
-  </a>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid row">
+    <div class="pull-right navbar-text">
+      <a routerLink="../../../../../.." class="cl-icon-padding">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </div>
+  </div>
 </nav>
