--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -26,11 +26,11 @@
       <input [(ngModel)]="page.name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
-      <label for="page-title">Title</label>
+      <label for="page-title">Description</label>
       <input [(ngModel)]="page.description" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" (click)="deletePage()" routerLink="..">Delete</a>
+  <a class="btn btn-danger  btn-block" (click)="deletePage()">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
