--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,32 +1,43 @@
-<div class="container">
-<div *ngIf="errorFlag"
-class="alert alert-danger">
+<div class="container-fluid">
+<div *ngIf="errorFlag" class="alert alert-danger">
 {{errorMsg}}
 </div>
 <h1>Login</h1>
-  <form (ngSubmit) = "login()" #f="ngForm">
+
+<div class="container">
+  <form (ngSubmit) = "login(username, password)" #f="ngForm">
+    <!--<div class="form-group">-->
+      <!--<label for="username">Username</label>-->
+      <!--<input type="text" class="form-control" id="username" placeholder="username" name="username" ngModel required #username="ngModel">-->
+    <!--</div>-->
     <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" placeholder="username" name="username" ngModel required #username="ngModel">
+      <input [(ngModel)]="username" type="text" name="username" id="username" placeholder="username" class="form-control">
     </div>
 
-    <span class="help-block" *ngIf="!username.valid && username.touched">
-    Please enter username!
-    </span>
+    <!--<span class="help-block" *ngIf="!username.valid && username.touched">-->
+    <!--Please enter username!-->
+    <!--</span>-->
 
+    <!--<div class="form-group">-->
+      <!--<label for="password">Password</label>-->
+      <!--<input type="password" class="form-control" id="password" placeholder="password" name="password" ngModel required #password="ngModel">-->
+    <!--</div>-->
     <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" placeholder="password" name="password" ngModel required #password="ngModel">
+      <input [(ngModel)]="password" type="password" name="password" id="password" placeholder="password" class="form-control">
     </div>
 
-    <span class="help-block" *ngIf="!password.valid && password.touched">
-    Please enter password!
-    </span>
+    <!--<span class="help-block" *ngIf="!password.valid && password.touched">-->
+    <!--Please enter password!-->
+    <!--</span>-->
 
+    <!--<div class="form-group">-->
+      <!--<button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>-->
+    <!--</div>-->
     <div class="form-group">
-      <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+      <button class="btn btn-primary btn-block" type="submit">Login</button>
     </div>
-
-    <a routerLink="/register" class="btn btn-success btn-block">Regester</a>
   </form>
+  <a routerLink="/register" class="btn btn-success btn-block">Register</a>
+</div>
+
 </div>
