--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -20,7 +20,7 @@
         <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/{{webDeveloperId}}/website/">
           Edit Websites
         </a >
-        <a (click)="updateWebsite()" routerLink=".." class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a (click)="updateWebsite(updatedWebsite)" routerLink=".." class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a >
       </div>
@@ -42,17 +42,17 @@
       <div class="form-group cl-8-top">
         <div class="form-group">
           <label for="website-name">Website Name</label>
-          <input [(ngModel)]="website.name" type="text" class="form-control" id="website-name" placeholder="website name" [ngModelOptions]="{standalone: true}">
+          <input [(ngModel)]="updatedWebsite.name" type="text" class="form-control" id="website-name" placeholder="website name" [ngModelOptions]="{standalone: true}">
         </div>
       </div>
       <div class="form-group cl-8-top">
         <div class="form-group">
           <label for="website-description">Website Description</label>
-          <textarea [(ngModel)]="website.description" id="website-description" class="form-control" rows="5"
+          <textarea [(ngModel)]="updatedWebsite.description" id="website-description" class="form-control" rows="5"
                   placeholder="description" [ngModelOptions]="{standalone: true}"></textarea>
         </div>
       </div>
-      <a (click)="deleteWebsite()" routerLink=".." class="btn btn-danger btn-block cl-8-top">Delete</a >
+      <a (click)="deleteWebsite()" class="btn btn-danger btn-block cl-8-top">Delete</a >
     </form>
   </div>
 
