--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -1,13 +1,59 @@
+<!--<nav class="navbar navbar-fixed-top navbar-light bg-secondary">-->
+  <!--<a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">-->
+    <!--<span class="glyphicon glyphicon-chevron-left text-dark"></span>-->
+  <!--</a>-->
+  <!--<div class="navbar-brand font-weight-bold">-->
+    <!--Choose Widget-->
+  <!--</div>-->
+<!--</nav>-->
+<!--<div class="container-fluid cl-body-padding">-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="btn extra-left-padding" (click)="createWidget('HEADER')">Header</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="extra-left-padding" routerLink="./">Label</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="btn extra-left-padding" (click)="createWidget('HTML')">HTML</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="btn extra-left-padding" (click)="createWidget('TEXT')">Text Input</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="extra-left-padding" routerLink="./">Link</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="extra-left-padding" routerLink="./">Button</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="btn extra-left-padding" (click)="createWidget('IMAGE')">Image</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="btn extra-left-padding" (click)="createWidget('YOUTUBE')">YouTube</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="extra-left-padding" routerLink="./">Data Table</a>-->
+  <!--</div>-->
+  <!--<div class="extra-padding">-->
+    <!--<a class="extra-left-padding" routerLink="./">Repeater</a>-->
+  <!--</div>-->
+<!--</div>-->
+<!--<nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">-->
+  <!--<a class="btn navbar-brand pull-right" routerLink="/user/{{userId}}">-->
+    <!--<span class="glyphicon glyphicon-user text-primary"></span>-->
+  <!--</a>-->
+<!--</nav>-->
+
+
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid row">
     <div class="navbar-text pull-left">
-      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">
-          <span class="glyphicon glyphicon-chevron-left">
-          </span>
+      <a routerLink=".." class="cl-text-black cl-icon-padding">
+        <span class="glyphicon glyphicon-chevron-left">
+        </span>
       </a>
     </div>
-
-    <a class="navbar-brand cl-text-white cl-text-bold">
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
       Choose Widget
     </a>
   </div>
@@ -16,16 +62,16 @@
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('HEADER')">Header</a>
+      <a routerLink="../heading">Heading</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Label</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink=".">HTML</a>
+      <a routerLink="../html">HTML</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink=".">Text Input</a>
+      <a routerLink="../text">Text</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Link</a>
@@ -34,10 +80,10 @@
       <a routerLink=".">Button</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('IMAGE')">Image</a>
+      <a routerLink="../image">Image</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('YOUTUBE')">YouTube</a>
+      <a routerLink="../youtube">YouTube</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Data Table</a>
@@ -51,12 +97,9 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-
-      <a routerLink="/user/{{uid}}" class="cl-icon-padding">
+      <a routerLink="../../../../../.." class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
-
     </div>
   </div>
 </nav>
-
