--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -1,54 +1,3 @@
-<!--<nav class="navbar navbar-default navbar-fixed-top">-->
-  <!--<div class="container-fluid row">-->
-
-    <!--<div class="navbar-text pull-left">-->
-      <!--<a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">-->
-          <!--<span class="glyphicon glyphicon-chevron-left">-->
-          <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<div class="navbar-text pull-right">-->
-      <!--<a routerLink=".." (click)="updateWidget(widget)" class="cl-icon-padding cl-text-black">-->
-          <!--<span class="glyphicon glyphicon-ok">-->
-          <!--</span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">-->
-      <!--Widgets Edit-->
-    <!--</a>-->
-  <!--</div>-->
-<!--</nav>-->
-
-<!--<div class="container">-->
-  <!--<form>-->
-    <!--<div class="form-group">-->
-      <!--<label for="heading-name">Name</label>-->
-      <!--<input type="text" class="form-control" name="name" id="heading-name" placeholder="Name">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="heading-text">Text</label>-->
-      <!--<input [(ngModel)]="widget.text" type="text" class="form-control" name="heading-text" id="heading-text" placeholder="Text">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="heading-size">Size</label>-->
-      <!--<input [(ngModel)]="widget.size" type="text" class="form-control" name="heading-size" id="heading-size" placeholder="3">-->
-    <!--</div>-->
-  <!--</form>-->
-  <!--<a class="btn btn-danger  btn-block" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" (click)="deleteWidget()">Delete</a>-->
-<!--</div>-->
-
-<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
-  <!--<div class="container-fluid row">-->
-    <!--<div class="pull-right navbar-text">-->
-
-      <!--<a routerLink="/user/{{uid}}" class="cl-icon-padding">-->
-        <!--<span class="glyphicon glyphicon-user"></span>-->
-      <!--</a>-->
-
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid row">
     <div class="navbar-text pull-left">
@@ -72,7 +21,7 @@
 <div class="container">
   <form>
     <div class="form-group">
-      <label for="heading-name">Name (actually there is no attribute for this according to assignment doc)</label>
+      <label for="heading-name">Name</label>
       <input type="text" class="form-control" id="heading-name" placeholder="Name">
     </div>
     <div class="form-group">
