--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -1,43 +1,74 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid row">
-    <div class="navbar-text pull-left">
-      <a routerLink=".." class="cl-text-black cl-icon-padding">
-        <span class="glyphicon glyphicon-chevron-left">
-        </span>
-      </a>
-    </div>
-    <div class="navbar-text pull-right">
-      <a (click)="updateOrCreateWidget()" class="cl-icon-padding cl-text-black">
-        <span class="glyphicon glyphicon-ok">
-        </span>
-      </a>
-    </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit
-    </a>
-  </div>
-</nav>
+<!--<nav class="navbar navbar-default navbar-fixed-top">-->
+  <!--<div class="container-fluid row">-->
+    <!--<div class="navbar-text pull-left">-->
+      <!--<a routerLink=".." class="cl-text-black cl-icon-padding">-->
+        <!--<span class="glyphicon glyphicon-chevron-left">-->
+        <!--</span>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class="navbar-text pull-right">-->
+      <!--<a (click)="updateOrCreateWidget()" class="cl-icon-padding cl-text-black">-->
+        <!--<span class="glyphicon glyphicon-ok">-->
+        <!--</span>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">-->
+      <!--Widgets Edit-->
+    <!--</a>-->
+  <!--</div>-->
+<!--</nav>-->
 
-<div class="container">
-  <form>
-    <div class="form-group">
-      <label for="heading-name">Name (actually there is no attribute for this according to assignment doc)</label>
-      <input type="text" class="form-control" id="heading-name" placeholder="Name">
-    </div>
+<!--<div class="container">-->
+  <!--<form>-->
+    <!--<div class="form-group">-->
+      <!--<label for="heading-name">Name (actually there is no attribute for this according to assignment doc)</label>-->
+      <!--<input [(ngModel)]="widget.text" type="text" class="form-control" id="heading-name" placeholder="Name">-->
+    <!--</div>-->
     <!--<div class="form-group">-->
       <!--<label for="html-editor">HTML</label>-->
-      <!--&lt;!&ndash;<quill-editor [(ngModel)]="widget.text" [ngModelOptions]="{standalone: true}"></quill-editor>&ndash;&gt;-->
+      <!--<input [(ngModel)]="widget.text" id="html-editor" class="form-control" placeholder="html-editor" [ngModelOptions]="{standalone: true}">-->
     <!--</div>-->
-  </form>
-  <a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>
-</div>
+  <!--</form>-->
+  <!--<a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>-->
+<!--</div>-->
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid row">
-    <div class="pull-right navbar-text">
-      <a routerLink="../../../../../.." class="cl-icon-padding">
-        <span class="glyphicon glyphicon-user"></span>
-      </a>
-    </div>
+<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
+  <!--<div class="container-fluid row">-->
+    <!--<div class="pull-right navbar-text">-->
+      <!--<a routerLink="../../../../../.." class="cl-icon-padding">-->
+        <!--<span class="glyphicon glyphicon-user"></span>-->
+      <!--</a>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
+
+<nav class="navbar navbar-fixed-top navbar-light bg-secondary">
+  <a class="btn navbar-brand" routerLink="..">
+    <span class="glyphicon glyphicon-chevron-left text-dark"></span>
+  </a>
+  <div class="navbar-brand font-weight-bold" routerLink=".">
+    Widget Edit
   </div>
+  <a class="btn navbar-brand pull-right" (click)="updateOrCreateWidget()">
+    <span class="glyphicon glyphicon-ok text-dark"></span>
+  </a>
+</nav>
+<div class="container-fluid cl-body-padding">
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input [(ngModel)]="widget.name" id="name" type="text" class="form-control" name="name" placeholder="Name">
+    </div>
+    <div class="form-group">
+      <label for="html">HTML</label>
+      <!-- <input [(ngModel)]="widget.text" type="text" class="form-control" name="text" placeholder="Text"> -->
+      <quill-editor [(ngModel)]="widget.text" id="html" [ngModelOptions]="{standalone: true}"></quill-editor>
+    </div>
+  </form>
+  <a (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</a>
+</div>
+<nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">
+  <a class="btn navbar-brand pull-right" routerLink="/user/{{uid}}">
+    <span class="glyphicon glyphicon-user text-primary"></span>
+  </a>
 </nav>
