--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,4 +1,5 @@
 <div [ngSwitch]="widget.widgetType">
+<!--<div [ngSwitch]="123">-->
 
   <div *ngSwitchCase="'HEADER'">
     <app-widget-header></app-widget-header>
