--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -47,7 +47,7 @@
     <span class="glyphicon glyphicon-chevron-left text-dark"></span>
   </a>
   <div class="navbar-brand font-weight-bold" routerLink=".">
-    Widget Edit
+    Widget Edit {{widget.widgetType}}
   </div>
   <a class="btn navbar-brand pull-right" (click)="updateOrCreateWidget()">
     <span class="glyphicon glyphicon-ok text-dark"></span>
