--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -15,7 +15,7 @@
       <!--</a>-->
     <!--</div>-->
     <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit
+      Widgets Edit {{widget.widgetType}}
     </a>
   </div>
   <a class="btn navbar-brand pull-right" (click)="updateOrCreateWidget()">
