--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="form-group">
-    <a class="btn btn-primary btn-block" routerLink="/user/{{user._id}}/website">Websites</a>
+    <a class="btn btn-primary btn-block" routerLink="/user/{{uid}}/website">Websites</a>
     </div>
 
     <div class="form-group">
