--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -62,7 +62,7 @@
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="../heading">Heading</a>
+      <a (click)="createWidget('HEADER')">Header</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Label</a>
