--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit
+      Widgets Edit {{widget.widgetType}}
     </a>
   </div>
 </nav>
@@ -21,7 +21,7 @@
 <div class="container">
   <form>
     <div class="form-group">
-      <label for="image-name">Name (actually there is no attribute for this according to assignment doc)</label>
+      <label for="image-name"></label>
       <input type="text" class="form-control" id="image-name" placeholder="Name">
     </div>
     <div class="form-group">
