--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit
+      Widgets Edit {{widget.widgetType}}
     </a>
   </div>
 </nav>
@@ -21,25 +21,25 @@
 <div class="container">
   <form>
     <div class="form-group">
-      <label for="text-name">Name (actually there is no attribute for this according to assignment doc)</label>
-      <input type="text" class="form-control" id="text-name" placeholder="Name">
+      <label for="text-name">Name</label>
+      <input [(ngModel)]="widget.name" type="text" class="form-control" id="text-name" placeholder="Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="text-text">Text</label>
       <input [(ngModel)]="widget.text" type="text" class="form-control" id="text-text" placeholder="Text" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
-      <label for="text-rows">Rows (actually there is no attribute for this according to assignment doc)</label>
+      <label for="text-rows">Rows</label>
       <input type="text" class="form-control" id="text-rows" placeholder="Rows">
     </div>
     <div class="form-group">
-      <label for="text-placeholder">Rows (actually there is no attribute for this according to assignment doc)</label>
+      <label for="text-placeholder">Placeholder</label>
       <input type="text" class="form-control" id="text-placeholder" placeholder="Placeholder">
     </div>
     <div class="input-group">
       <input type="text" readonly value="Formatted" class="form-control"/>
       <span class="input-group-addon">
-        <input [(ngModel)]="widget.formatted" type="checkbox" [ngModelOptions]="{standalone: true}">
+        <input [(ngModel)]="widget.formatted" type="checkbox" [ngModelOptions]="{standalone: true}"/>
       </span>
     </div><br/>
   </form>
