--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -33,7 +33,7 @@
           <span class="glyphicon glyphicon-cog"></span>
         </a>
       </div>
-      <h1>Html name: {{widget.name}}</h1>
+      <h1>{{widget.text}}</h1>
     </div>
 
     <div *ngIf="widget.widgetType == 'TEXT'">
@@ -45,7 +45,7 @@
           <span class="glyphicon glyphicon-cog"></span>
         </a>
       </div>
-      <h1>Text name: {{widget.name}}</h1>
+      <h1>{{widget.text}}</h1>
     </div>
 
     <div *ngIf="widget.widgetType == 'IMAGE'">
@@ -56,17 +56,17 @@
         <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}" class="pull-right">
           <span class="glyphicon glyphicon-cog"></span>
         </a>
-        <img class="img-responsive cl-widget-images" src="{{baseUrl}}/api/image/{{widget.url}}" alt="alt" width="widget.width">
+        <img class="img-responsive cl-widget-images" src="{{widget.url}}" alt="alt" width="widget.width">
       </div>
       <br>
     </div>
 
     <div class="embed-responsive embed-responsive-16by9" *ngIf="widget.widgetType == 'YOUTUBE'">
       <div>
-        <iframe width="{{widget.width}}" height="360" [src]="photoURL(widget.url)" frameborder="0" allowfullscreen>
+        <iframe width="{{widget.width}}" height="360" [src]="modifyURL(widget.url)" frameborder="0" allowfullscreen>
         </iframe>
         <a [routerLink]="['/#']" class="pull-right">
-          <span class="glyphicon glyphicon-menu-hamburger" style="background-color: white"></span>
+          <span class="glyphicon glyphicon-menu-hamburger" style="  background-color: white"></span>
         </a>
         <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}" class="pull-right">
           <span class="glyphicon glyphicon-cog" style="background-color: white"></span>
