--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -68,22 +68,27 @@
       <a routerLink=".">Label</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="../html">HTML</a>
+      <a (click)="createWidget('HTML')">HTML</a>
+      <!--<a routerLink="../html">HTML</a>-->
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="../text">Text</a>
+      <a (click)="createWidget('TEXT')">Text</a>
+      <!--<a routerLink="../text">Text</a>-->
     </li>
     <li class="list-group-item cl-list-item-borderless">
+      <!--<a (click)="createWidget('LINK')" )></a>-->
       <a routerLink=".">Link</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Button</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="../image">Image</a>
+      <a (click)="createWidget('IMAGE')">Image</a>
+      <!--<a routerLink="../image">Image</a>-->
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="../youtube">YouTube</a>
+      <a (click)="createWidget('YOUTUBE')">YOUTUBE</a>
+      <!--<a routerLink="../youtube">YouTube</a>-->
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink=".">Data Table</a>
